# stm32f3disco_mvp

./: .gitignore  Cargo.toml  notes.txt  openocd.gdb
.cargo/: config
src/: main.rs
