[package]
name = "stm32f3disco_mvp"
version = "0.1.0"
authors = ["Kurt Strecker <ksphotopro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
panic-itm = "0.4.2"
# Replace stm32f303xc with your target chip, see next section for more info
stm32f3-discovery = "0.6.0"